[UPD] ceppp_pp: typo menu portal

--- a/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
@@ -1372,7 +1372,7 @@
                     href="/new/ceppp_maladie_personne_affectee"
                 >
                     <i class="fa fa-plus-circle" />
-                    Vos maladies
+                    Vos expériences
                 </a>
             </t>
         </xpath>
