[ADD] ceppp_pp: portail autocomplete maladie
- search async to server alike maladie
- support m2m_tag similar with string instead of using id
- format data maladie
- add search by nom into maladie web

--- a/ceppp_patient_partenaire/views/ceppp_maladie.xml
+++ b/ceppp_patient_partenaire/views/ceppp_maladie.xml
@@ -76,6 +76,7 @@
         <field name="model">ceppp.maladie</field>
         <field name="arch" type="xml">
             <search string="Ceppp maladie">
+                <field name="nom" string="Nom" />
                 <filter domain="[('nom','!=',False)]" name="nom" string="Nom" />
                 <filter
                     domain="[('chapitre_maladie_id','!=',False)]"
