--- a/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
@@ -430,6 +430,32 @@
                 <!--                    </div>-->
                 <!--                </div>-->
                 <div class="form-group">
+                    <label class="col-md-3 col-sm-4 control-label" for="maladie">Vos maladies</label>
+                    <div class="col-md-7 col-sm-8">
+                        <textarea
+                            id="maladie"
+                            name="maladie"
+                            rows="4"
+                            cols="60"
+                            maxlength="4096"
+                            tabindex="1"
+                            placeholder="Écrivez une maladie par auto-complétion"
+                        />
+                        <!--                        <input-->
+                        <!--                            id="maladie"-->
+                        <!--                            type="search"-->
+                        <!--                            dir="ltr"-->
+                        <!--                            spellcheck="false"-->
+                        <!--                            autocorrect="off"-->
+                        <!--                            autocomplete="off"-->
+                        <!--                            autocapitalize="off"-->
+                        <!--                            maxlength="2048"-->
+                        <!--                            tabindex="1"-->
+                        <!--                            placeholder="Auto-complétion..."-->
+                        <!--                        />-->
+                    </div>
+                </div>
+                <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="detail_maladie">
                         Énumérez vos maladies et détaillez votre expérience
                     </label>
@@ -1046,6 +1072,22 @@
                                             </div>
                                             <div class="modal-body" id="sign-dialog">
                                                 <div class="form-group">
+                                                    <label class="control-label hdd4" for="maladie">
+                                                        Vos maladies :
+                                                    </label><br />
+                                                    <!-- prettier-ignore-start -->
+                                                    <textarea
+                                                        id="maladie"
+                                                        name="maladie"
+                                                        class="form-control o_website_form_input maladie"
+                                                        rows="4"
+                                                        cols="80"
+                                                        maxlength="4096"
+                                                        tabindex="1"
+                                                        placeholder="Écrivez une maladie par auto-complétion"
+                                                    ><t t-esc="maladie_autocomplete"/></textarea><!-- prettier-ignore-end -->
+                                                </div>
+                                                <div class="form-group">
                                                     <label class="control-label hdd4" for="detail_maladie">
                                                         Liste de vos maladies et votre expérience :
                                                     </label>
@@ -1150,13 +1192,22 @@
     <template
         id="assets_frontend_ceppp_patient_partenaire_portal"
         name="Portal assets frontend"
-        inherit_id="web.assets_frontend"
+        inherit_id="website.assets_frontend"
     >
+        <xpath expr="//link[last()]" position="after">
+            <link
+                rel="stylesheet"
+                type="text/css"
+                href="/ceppp_patient_partenaire/static/src/css/lib/autoComplete.css"
+            />
+        </xpath>
+
         <xpath expr="//script[last()]" position="after">
             <script
                 type="text/javascript"
                 src="/ceppp_patient_partenaire/static/src/js/portal.ceppp_patient_partenaire.js"
             />
+            <script type="text/javascript" src="/ceppp_patient_partenaire/static/src/js/lib/autoComplete.js" />
         </xpath>
     </template>
 
